@@ -43,8 +43,16 @@ class InstallerTypeServer implements InstallerType {
   }
 
   @Override
-  List<String> getJvmArgs() {
+  List<String> getJvmModuleOpensArgs() {
     [
+      '--add-opens=java.base/java.lang=ALL-UNNAMED', // Required for Hibernate 3.6/Javassist proxying (at minimum, may be used for other things)
+      '--add-opens=java.base/java.util=ALL-UNNAMED', // Required at least for cloning GoConfig subclasses of java.util classes :(
+    ]
+  }
+
+  @Override
+  List<String> getJvmArgs() {
+    getJvmModuleOpensArgs() + [
       '-Xms512m',
       '-Xmx1024m',
       '-XX:MaxMetaspaceSize=400m',
